[SimulatorView] Force iframe reloading to make sure that only one simulator is running at once

--- a/public/simulator/simulator.html
+++ b/public/simulator/simulator.html
@@ -755,6 +755,9 @@
                         Module.downloadScreenshot();
                     });
                 loaded = true;
+                // Remove the loading screen
+                document.querySelector('.calculator').classList.remove('loading');
+
                 window.top.postMessage('Loaded');
             });
         });
