--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Upsilon Workshop</title>
+    <meta name="theme-color" content="#7ea2ce" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Upsilon Workshop" />
+    <meta name="twitter:description" content="Upsilon Workshop is a website to create and share projects for the Numworks calculator." />
+    <meta name="twitter:image" content="https://yaya-cout.github.io/Upsilon-Workshop/assets/background_light.webp" />
+    <meta property="og:type" content="object" />
+    <meta property="og:url" content="https://yaya-cout.github.io/Upsilon-Workshop/" />
+    <meta property="og:title" content="Upsilon Workshop" />
+    <meta property="og:description" content="Upsilon Workshop is a website to create and share projects for the Numworks calculator." />
+    <meta property="og:image" content="https://yaya-cout.github.io/Upsilon-Workshop/assets/background_light.webp" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
 </head>
 
 <body>
