[Simulator] Change pixelated to crisp-edges
Look better on Firefox as Chromium doesn't implement the standard (why does people still use this shitty browser in 2024 anyway ?), and Chromium seems to fallback to smooth, so it's still looking better

--- a/public/simulator/CASWorksSimulator.html
+++ b/public/simulator/CASWorksSimulator.html
@@ -365,8 +365,7 @@
         
         .calculator-mirror canvas {
             image-rendering: -moz-crisp-edges;
-            image-rendering: pixelated;
-            -ms-interpolation-mode: nearest-neighbor;
+            image-rendering: crisp-edges;
         }
         
         .calculator.loading canvas {
