--- a/public/simulator/simulator.html
+++ b/public/simulator/simulator.html
@@ -365,8 +365,7 @@
         
         .calculator-mirror canvas {
             image-rendering: -moz-crisp-edges;
-            image-rendering: pixelated;
-            -ms-interpolation-mode: nearest-neighbor;
+            image-rendering: crisp-edges;
         }
         
         .calculator.loading canvas {
